force-app/main/default/objects/Affiliation__c.object
<CustomObject>
    <!-- <compactLayoutAssignment>HEDA_Affiliation_Compact_Layout</compactLayoutAssignment> -->
    <description>Connection between a Contact and an Account.</description>
    <label>Affiliation</label>
    <nameField>
        <displayFormat>AF-{000000}</displayFormat>
        <label>Affiliation Key</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affiliations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>

    <fields>
        <fullName>count_student_role__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>count_student_role</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hud_ACADEMIC_PRIME_ROLE_INDICATOR__c</fullName>
        <label>hud_ACADEMIC_PRIME_ROLE_INDICATOR</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_DEPT_ID__c</fullName>
        <externalId>true</externalId>
        <label>hud_DEPT_ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_EFFDT__c</fullName>
        <label>hud_EFFDT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>hud_EFF_STATUS__c</fullName>
        <label>hud_EFF_STATUS</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_EMP_ADDR_PS_LOCATION_CD__c</fullName>
        <label>hud_EMP_ADDR_PS_LOCATION_CD</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_EMP_APPOINT_END_DT__c</fullName>
        <label>hud_EMP_APPOINT_END_DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>hud_EMP_DEPT_ENTRY_DT__c</fullName>
        <label>hud_EMP_DEPT_ENTRY_DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>hud_EMP_EMPLOYMENT_STATUS__c</fullName>
        <label>hud_EMP_EMPLOYMENT_STATUS</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_EMP_EMPL_CLASS__c</fullName>
        <label>hud_EMP_EMPL_CLASS</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_EMP_FACULTY_CD__c</fullName>
        <label>hud_EMP_FACULTY_CD</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_EMP_FULLTIME_FLAG__c</fullName>
        <description>1 OR 0</description>
        <label>hud_EMP_FULLTIME_FLAG</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_EMP_HIRE_DT__c</fullName>
        <label>hud_EMP_HIRE_DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>hud_EMP_JOBCODE__c</fullName>
        <label>hud_EMP_JOBCODE</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_EMP_MAJ_AFFILIATION_CD__c</fullName>
        <label>hud_EMP_MAJ_AFFILIATION_CD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_EMP_MAJ_AFFILIATION_DESC__c</fullName>
        <label>hud_EMP_MAJ_AFFILIATION_DESC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_EMP_PAID_FLAG__c</fullName>
        <description>1 or 0</description>
        <label>hud_EMP_PAID_FLAG</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_EMP_PAYGROUP__c</fullName>
        <label>hud_EMP_PAYGROUP</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_EMP_PS_COMPANY__c</fullName>
        <label>hud_EMP_PS_COMPANY</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_EMP_REHIRE_DT__c</fullName>
        <label>hud_EMP_REHIRE_DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>hud_EMP_SUB_AFFILIATION_CD__c</fullName>
        <label>hud_EMP_SUB_AFFILIATION_CD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_EMP_SUB_AFFILIATION_DESC__c</fullName>
        <label>hud_EMP_SUB_AFFILIATION_DESC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_EMP_TERMINATION_DT__c</fullName>
        <label>hud_EMP_TERMINATION_DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>hud_EMP_UNION_CD__c</fullName>
        <label>hud_EMP_UNION_CD</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_MULE_UNIQUE_PERSON_KEY__c</fullName>
        <externalId>true</externalId>
        <label>hud_MULE_UNIQUE_PERSON_KEY</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_PERSON_ROLES_KEY__c</fullName>
        <externalId>true</externalId>
        <label>hud_PERSON_ROLES_KEY</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_POI_COMMENTS__c</fullName>
        <label>hud_POI_COMMENTS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_POI_COMPANY__c</fullName>
        <label>hud_POI_COMPANY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_POI_FACULTY_CD__c</fullName>
        <label>hud_POI_FACULTY_CD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_POI_SHORT_DESC_LINE1__c</fullName>
        <label>hud_POI_SHORT_DESC_LINE1</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_POI_SHORT_DESC_LINE2__c</fullName>
        <label>hud_POI_SHORT_DESC_LINE2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_PRIME_ROLE_INDICATOR__c</fullName>
        <label>hud_PRIME_ROLE_INDICATOR</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_PRIVACY_VALUE__c</fullName>
        <label>hud_PRIVACY_VALUE</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_ROLE_END_DT__c</fullName>
        <label>hud_ROLE_END_DT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hud_ROLE_ID__c</fullName>
        <label>hud_ROLE_ID</label>
        <length>38</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_ROLE_ILK__c</fullName>
        <label>hud_ROLE_ILK</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_ROLE_SOURCE__c</fullName>
        <label>hud_ROLE_SOURCE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_ROLE_START_DT__c</fullName>
        <label>hud_ROLE_START_DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>hud_ROLE_TITLE__c</fullName>
        <label>hud_ROLE_TITLE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_ROLE_TYPE_CD__c</fullName>
        <label>hud_ROLE_TYPE_CD</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_STU_BOARD_LOCATION_HOUSE_CD__c</fullName>
        <label>hud_STU_BOARD_LOCATION_HOUSE_CD</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_STU_BOARD_STATUS__c</fullName>
        <label>hud_STU_BOARD_STATUS</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_STU_DEGREE__c</fullName>
        <label>hud_STU_DEGREE</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_STU_GRADUATION_DT__c</fullName>
        <label>hud_STU_GRADUATION_DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>hud_STU_LAST_ATTENDANCE_DT__c</fullName>
        <label>hud_STU_LAST_ATTENDANCE_DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>hud_STU_REC_LOCATION_HOUSE_CD__c</fullName>
        <label>hud_STU_REC_LOCATION_HOUSE_CD</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_STU_RES_HOUSE_CD__c</fullName>
        <label>hud_STU_RES_HOUSE_CD</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_STU_SCHOOL_CD__c</fullName>
        <label>hud_STU_SCHOOL_CD</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_STU_SPEC_PROG__c</fullName>
        <label>hud_STU_SPEC_PROG</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_STU_STU_DEPT__c</fullName>
        <label>hud_STU_STU_DEPT</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_STU_STU_STAT_CD__c</fullName>
        <label>hud_STU_STU_STAT_CD</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_STU_STU_YEAR_CD__c</fullName>
        <label>hud_STU_STU_YEAR_CD</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_STU_TIME_STATUS__c</fullName>
        <label>hud_STU_TIME_STATUS</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_SUPERVISOR_ID__c</fullName>
        <label>hud_SUPERVISOR_ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_UPDATE_DT__c</fullName>
        <label>hud_UPDATE_DT</label>
        <type>DateTime</type>
    </fields>
</CustomObject>